--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -13,26 +13,7 @@
             </div>
         </div>
         <div class="col-md-4 g-5 h-5 w-5">
-            <img src="image2.png" class="rounded-circle object-fit-cover img-fluid" alt="...">
-        </div>
-    </div>
-    <hr>
-</div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 g-5 h-5 w-5">
-            <img src="image copy.png" class="rounded-circle object-fit-cover img-fluid" alt="...">
-        </div>
-        <div class="col-md-8 g-5">
-            <div class="card-body">
-                <h1 class="card-title mb-3">The Second Heading <span class="text-body-secondary">Is Pretty Cool
-                        Too.</span></h1>
-                <p class="card-text g-2 fs-4">
-                    Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
-                    porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisi consectetur.
-                    Fusce dapibus, tellus ac cursus commodo.
-                </p>
-            </div>
+            <img src="../assets/img/1.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
         </div>
     </div>
     <hr>
