--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col-md-4 g-5 h-5 w-5">
-            <img src="../assets/img/1.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
+            <img src="../website/assets/img/1.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
         </div>
     </div>
     <hr>
