--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 mb-3">
-            <h1 class="card-title mb-3">Portfolio</h1>
+            <h1 class="card-title mb-3"><b>Portfolio</b></h1>
         </div>
     </div>
     <div class="row">
@@ -18,7 +18,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card">
-                <img src="../assets/img/big-project-image.png" class="card-img-top" alt="...">
+                <img src="../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="../assets/img/big-project-image.png" class="card-img-top" alt="...">
+                <img src="../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
@@ -38,7 +38,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="../assets/img/big-project-image.png" class="card-img-top" alt="...">
+                <img src="../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary">Project Name</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
