--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 g-5 h-5 w-5">
-            <img src="../assets/img/2.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
+            <img src="../website/assets/img/2.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
         </div>
         <div class="col-md-8 g-5">
             <div class="card-body">
