--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-8 g-5">
             <div class="card-body">
-                <h1 class="card-title mb-3">This First Heading <span class="text-body-secondary">Will Catch Your
+                <h1 class="card-title mb-3"><b> This First Heading </b><span class="text-secondary">Will Catch Your
                         Eye</span></h1>
                 <p class="card-text g-2 fs-4">
                     Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
@@ -16,5 +16,5 @@
             <img src="../website/assets/img/1.jpg" class="rounded-circle object-fit-cover img-fluid" alt="...">
         </div>
     </div>
-    <hr>
+    <hr class="my-5">
 </div>
