--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 mb-3">
-            <h1 class="card-title mb-3"><b>Portfolio</b></h1>
+            <h1 class="card-title my-1"><b>Portfolio</b></h1>
         </div>
     </div>
     <div class="row">
@@ -47,5 +47,5 @@
             </div>
         </div>
     </div>
-    <hr>
+    <hr class="my-5">
 </div>
