--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-md-8 g-5">
             <div class="card-body">
-                <h1 class="card-title mb-3">The Second Heading <span class="text-body-secondary">Is Pretty Cool
+                <h1 class="card-title mb-3"><b>The Second Heading</b><span class="text-secondary"> Is Pretty Cool
                         Too.</span></h1>
                 <p class="card-text g-2 fs-4">
                     Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
@@ -16,5 +16,5 @@
             </div>
         </div>
     </div>
-    <hr>
+    <hr class="my-5">
 </div>
