--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,24 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<form>
+    <h1>Contact</h1>
+    <div class="textarea col-8 w-80 mx-auto">
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+            commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo</p>
+    </div>
+    <div class="border border-2 rounded-2 col-8 w-50 mx-auto">
+        <div class="mb-3 d-flex justifi-content-center">
+            <label for="exampleInputEmail1" class="form-label">Your E-mail</label>
+            <input type="email" class="form-control" placeholder="Your E-Mail" id="exampleInputEmail1"
+                aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text"></div>
+        </div>
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Please enter your message here..." id="floatingTextarea2"
+                style="height: 100px"></textarea>
+            <label for="floatingTextarea2">Your message</label>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+    <hr class="my-5">
+</form>>
