--- a/website/assets/css/style.css
+++ b/website/assets/css/style.css
@@ -1,3 +1,10 @@
-body{
+body {
     background: #BDBDBD;
+}
+.tagline {
+    height: 400px;
+    background-image: url('../website/assets/img/bg.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
