--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,13 +1,8 @@
-<!-- your html code here -->
-<!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-
-<div class="position-relative d-inline-block"> <!-- hace que contenedor solo tenga ancho de la imagen -->
-  <img src="../website/assets/img/bg.jpg" class="img-fluid" alt="Descripción de la imagen">
-
-  <div class="position-absolute top-50 start-50 translate-middle text-center w-100">
-    <h1 class="fs-1 bg-white p-1 m-2">One Page Wonder</h1>
-    <h2 class="bg-white p-1 m-2">Will Knock Your Socks Off</h2>
+<div class="card text-center">
+  <img src="../website/assets/img/bg.jpg" class="img-fluid" alt="...">
+  <div class="card-img-overlay text-center w-100 mt-5">
+    <h1 class="display-1 fw-bold bg-white p-1 m-2">One Page Wonder</h1>
+    <h2 class="display-5 fw-bold bg-white p-1 m-2">Will Knock Your Socks Off</h2>
   </div>
-
   <hr class="my-5">
 </div>
