--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,6 @@
 <!-- your html code here -->
 <div class="container">
+    <hr class="my-5">
     <div class="row">
         <div class="col-md-8 g-5">
             <div class="card-body">
