--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -18,7 +18,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1438565434616-3ef039228b15?q=80&w=1173&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                <img src="https://images.unsplash.com/photo-1493962853295-0fd70327578a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary"><b>Project Name</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1518877593221-1f28583780b4?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                <img src="https://images.unsplash.com/photo-1552071379-041b32707fed?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary"><b>Project Name</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
@@ -38,7 +38,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1551946581-f7a62cd2f00b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
+                <img src="https://plus.unsplash.com/premium_photo-1723161842120-af0d30950596?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title text-primary"><b>Project Name</b></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
